--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
+
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <picture class="bg">
+    <source media="(min-width: 768px)" srcset="./images/pattern-background-desktop.svg" />
+    <img src="./images/pattern-background-mobile.svg" alt="Background pattern">
+  </picture>
+  <div class="flex container">
+    <div class="component">
+      <img src="./images/illustration-hero.svg"
+        alt="Illustration of person wearing headphones, listening to music and dancing">
+      <div class="flex component__content">
+        <h1 class="component__heading">Order Summary</h1>
+        <p class="component__subtitle">You can now listen to millions of songs, audiobooks, and podcasts on any device
+          anywhere you like!</p>
 
-  Order Summary
+        <div class="flex selection">
+          <div class="flex selection__plan">
+            <img src="./images/icon-music.svg" alt="Music note icon">
+            <div class="flex plan__details">
+              <span class="plan__type">Annual Plan</span>
+              <span class="plan__pricing">$59.99/year</span>
+            </div>
+          </div>
+          <button class="btn btn--change-plan">Change</button>
+        </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <button class="btn btn--to-pay">Proceed to Payment</button>
+        <button class="btn btn--cancel">Cancel Order</button>
+      </div>
+    </div>
   </div>
+
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/jositu" target="_blank">Josephine Situ</a>.
+  </div> -->
 </body>
+
 </html>
